# cream

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac
contrib/devtools/: gen-manpages.sh
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_test.txt
doc/: REST-interface.md
doc/man/: Makefile.am  bitcoin-qt.1  bitcoind.1  cream-cli.1  cream-qt.1  cream-tx.1  cream-wallet.1  creamd.1
doc/release-notes/: release-notes-0.11.0.md  release-notes-0.12.0.md  release-notes-0.13.0.md  release-notes-0.15.0.md  release-notes-0.16.0.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.4.3.md  release-notes-0.5.2.md  release-notes-0.8.2.md  release-notes-0.9.0.md  release-notes-0.9.2.1.md  release-notes-0.9.2.md
share/: setup.nsi.in
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  cream256.xpm  cream32.xpm  (+1 more)
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  (+106 more)
(+551 files in other folders)
