dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=creamd.1
endif

if ENABLE_QT
  dist_man1_MANS+=cream-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=cream-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=cream-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=cream-wallet.1
endif
endif
